--- a/hardening/openscap_hosts.yaml
+++ b/hardening/openscap_hosts.yaml
@@ -18,6 +18,7 @@
         state: directory
         mode: '0755'
       delegate_to: localhost
+      become: no
       run_once: true
 
     - name: Add universe repository
